--- a/themes/the-letter/index.html
+++ b/themes/the-letter/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en">
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
@@ -88,7 +88,7 @@
 	
 	<footer id="footer" role="contentinfo">
 		<p>
-			Theme made by <a href="http://www.guillaumelitaudon.fr/">Guillaume Litaudon</a> for <a href="http://www.picocms.org/">Pico CMS</a> – View on <a href="https://github.com/yomli/pico-plugins/the-letter/">GitHub</a>
+			Theme made by <a href="http://www.guillaumelitaudon.fr/">Guillaume Litaudon</a> for <a href="http://www.picocms.org/">Pico CMS</a> – View on <a href="https://github.com/yomli/pico-plugins/tree/master/themes/the-letter">GitHub</a>
 		</p>
 	</footer>
 
